--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test:e2e": "gulp test:e2e",
     "test:coverage": "gulp test:coverage",
     "postinstall": "bower install --allow-root && bower prune --allow-root",
-    "generate-ssl-certs": "scripts/generate-ssl-certs.sh"
+    "generate-ssl-certs": "scripts/generate-ssl-certs.sh",
+    "mongo": "cd C:/Program Files/MongoDB/Server/3.4/bin && mongod.exe"
   },
   "dependencies": {
     "acl": "~0.4.10",
