--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Thumbs.db
 .nodemonignore
 .sass-cache/
 node_modules/
-# public/lib/ I want to sync the modifications i make in these files
+public/lib/
 app/tests/coverage/
 .bower-*/
 .idea/
