--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "proKiln",
-  "description": "proKiln app",
+  "name": "prokiln",
+  "description": "a glass kiln controlling platform",
   "version": "0.1.0",
   "meanjs-version": "0.5.0",
-  "private": false,
-  "author": "samueljim <samueljim@msn.com>",
-  "license": "MIT",
+  "private": true,
+  "author": "Samuel Henry",
+  "license": "private",
   "repository": "https://Samueljim@bitbucket.org/glassartistry/kilncontroller.git",
   "engines": {
-    "node": "lastest",
-    "npm": "lastest"
+    "node": "latest",
+    "npm": ">=3.10.8"
   },
   "scripts": {
     "update": "npm update && npm prune && bower install --allow-root && bower prune --allow-root",
@@ -28,13 +28,13 @@
     "test:coverage": "gulp test:coverage",
     "postinstall": "bower install --allow-root && bower prune --allow-root",
     "generate-ssl-certs": "scripts/generate-ssl-certs.sh",
-    "mongo": "sudo service mongod start",
-    "mongo:restart": "sudo service mongod restart"
+    "mongoPC": "cd C:/Program Files/MongoDB/Server/3.4/bin && mongod.exe",
+    "mongo": "sudo service mongod start"
   },
   "dependencies": {
-    "acl": "^0.4.10",
-    "async": "^2.3.0",
-    "body-parser": "^1.17.1",
+    "acl": "~0.4.10",
+    "async": "~2.3.0",
+    "body-parser": "~1.17.1",
     "bower": "~1.8.0",
     "chalk": "~1.1.3",
     "compression": "~1.6.2",
@@ -56,8 +56,8 @@
     "mongoose": "~4.9.3",
     "morgan": "~1.8.1",
     "multer": "~1.3.0",
-    "nodemailer": "~2.6.4",
-    "owasp-password-strength-test": "~1.3.0",
+    "nodemailer": "latest", 
+    "owasp-password-strength-test": "^1.3.0",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-github": "~1.1.0",
@@ -75,8 +75,9 @@
   "devDependencies": {
     "coveralls": "~2.13.0",
     "del": "^2.2.2",
-    "eslint": "~2.2.0",
-    "eslint-config-airbnb": "~6.0.2",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-plugin-react": "^4.2.3",
     "gulp": "~3.9.1",
     "gulp-angular-templatecache": "~2.0.0",
     "gulp-autoprefixer": "~3.1.0",
@@ -95,7 +96,7 @@
     "gulp-refresh": "~1.1.0",
     "gulp-rename": "~1.2.2",
     "gulp-rev": "^7.1.2",
-    "gulp-sass": "~3.1.0",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "~2.1.2",
     "gulp-util": "~3.0.7",
     "imagemin-pngquant": "~5.0.0",
