--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "method-override": "~2.3.8",
     "mocha": "~3.2.0",
     "mongoose": "~4.9.3",
+    "mongoose-socket.io": "latest",
     "morgan": "~1.8.1",
     "multer": "~1.3.0",
-    "nodemailer": "latest", 
+    "nodemailer": "latest",
     "owasp-password-strength-test": "^1.3.0",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
