--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mongoose": "~4.9.3",
     "morgan": "~1.8.1",
     "multer": "~1.3.0",
+    "ng-sortable": "^1.3.8",
     "nodemailer": "^4.0.0",
     "owasp-password-strength-test": "^1.3.0",
     "passport": "~0.3.2",
