--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,7 @@
 {
   "directory": "public/lib",
-  "interactive": false 
+  "interactive": false,
+  "resolvers": [
+    "bower-npm-resolver"
+  ]
 }
