--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: node_js
-sudo: false
+dist: trusty
+sudo: required
 node_js:
-  - 4
-  - 5
-  - 6
-  - 7
+  - '6.10'
+  - '7'
+  - '8'
 matrix:
-  allow_failures:
-    - node_js: 7
+  fast_finish: true
+#  allow_failures:
+#    - node_js: '8'
 os:
   - linux
   - centos
@@ -23,24 +24,29 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - google-chrome
     packages:
     - g++-4.8
     - gcc-4.8
     - clang
+    - google-chrome-stable
 before_install:
-  - npm i nsp -g
-  - npm i snyk -g
-  - export DISPLAY=:99.0
-  - bash scripts/setup-protractor.sh
+  - npm install webdriver-manager -g && webdriver-manager update
+  - npm install nsp -g
+#  - npm install snyk -g
+  - 'export PATH=$PATH:/usr/lib/chromium-browser/'
+  - 'export DISPLAY=:99.0'
+  - 'sh -e /etc/init.d/xvfb start'
   - sleep 3
 #before_script:
 #  - snyk auth $SNYK_TOKEN
 #  - snyk test
 after_script:
   - nsp check
-  - snyk test
+#  - snyk test
   - gulp test:coverage
-  - node_modules/.bin/lcov-result-merger 'coverage/**/lcov.info' | node_modules/coveralls/bin/coveralls.js
+  - npm install lcov-result-merger@~1.2.0 -g
+  - lcov-result-merger 'coverage/**/lcov.info' | node_modules/coveralls/bin/coveralls.js
 notifications:
   webhooks:
     urls:
