--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "angular-ui-notification": "~0.2.0",
     "angular-ui-router": "~0.2.18",
     "ng-file-upload": "~12.1.0",
-    "owasp-password-strength-test": "~1.3.0",
-    "angular-chart.js": "^1.1.1"
+    "owasp-password-strength-test": "~1.3.0"
   },
   "overrides": {
     "bootstrap": {
